<resources>
    <string name="app_name">Presensi Labti</string>

    //splash screen
    <string name="btn_get_started">Get Started</string>

    //main user
    <string name="header_text_hi">Hii</string>
    <string name="text_btn_absen">Absen</string>
    <string name="text_btn_report">Report</string>
    <string name="text_btn_exit">Exit</string>

    //cek location
    <string name="scaning">Scanning...</string>
    <string name="cek_location">Checking Your Location</string>

    //absen
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>

    //login
    <string name="login_text">Login</string>
    <string name="btn_login">Login</string>
    <string name="hint_npm">NPM</string>
    <string name="hint_password">Password</string>
    <string name="or">Or</string>
    
    //register
    <string name="register_text">Register</string>
    <string name="btn_register">Register</string>
    <string name="hint_nama">Nama</string>
</resources>