<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".view.main.MainUserActivity">

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/header_text_hi"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="550dp"
        android:src="@drawable/shape_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.example.presensilabti.view.costumview.ButtonHomeCostumView
        android:id="@+id/button_absen"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:drawableTop="@drawable/icon_absen"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/text_btn_absen"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.152" />

    <com.example.presensilabti.view.costumview.ButtonHomeCostumView
        android:id="@+id/button_report"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_marginEnd="20dp"
        android:drawableTop="@drawable/icon_report"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/text_btn_report"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toEndOf="@+id/button_absen"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.152" />

    <com.example.presensilabti.view.costumview.ButtonHomeCostumView
        android:id="@+id/button_exit"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/text_btn_exit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_absen"
        app:layout_constraintVertical_bias="0.066" />


</androidx.constraintlayout.widget.ConstraintLayout>